test/tests/compiler/14_pointers/valid/extra_credit/plx1_match_nil.plx
pub fn main(none) i32 {
    match 0 {
        -> nil { return 0 }
        -> 1 { return 1 }
        otherwise { return 2 }
    }
}
