test/tests/compiler/14_pointers/invalid_types/plx1_cast_const_deref.plx
pub fn main(none) i32 {
    return cast<u64>(0)[]
}
